Add quarto styling for slides

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -128,7 +128,7 @@ p
 
 /* Code */
 
-pre, code
+pre, .gatsby-highlight code
     font-family: var(--font-code)
     font-weight: 500
     font-size: 1.25rem
